--- a/pg-sd2/app/views/layout.pug
+++ b/pg-sd2/app/views/layout.pug
@@ -3,7 +3,7 @@ html
         title Capsule 
     body 
         div.navBar   
-            h1 
+            h1
                 a(href='/') Capsule 
             ul     
                 li 
@@ -56,6 +56,8 @@ html
                 color: #495ad1;
                 text-transform: uppercase;
                 padding-left: 30px;
+                font-size: 30px;
+                
             }
 
             .navBar ul {
@@ -102,7 +104,7 @@ html
                 z-index: 999;
             }
 
-            .loginMessage {
+            #loginMessage {
                 display: none;
                 position: fixed;
                 top: 50%;
@@ -120,7 +122,7 @@ html
                 z-index: 1000;
             }
 
-            .loginMessage a {
+            #loginMessage a {
                 color: #495ad1;
                 font-weight: 600;
                 text-decoration: none;
@@ -144,7 +146,7 @@ html
 
     a.createPostButton(href=loggedIn ? "/post" : "#", onclick=loggedIn ? "" : "showLoginMessage()") +
 
-    div(class="loginMessage", id="loginMessage")
+    div(id="loginMessage")
         p Please 
             a(href='/login') log in 
             | or 
