--- a/pg-sd2/app/views/specific-year.pug
+++ b/pg-sd2/app/views/specific-year.pug
@@ -11,17 +11,24 @@ block content
             padding-top: 80px; 
         }
 
+        .navBar {
+            margin-left: -20px;
+        }
+
         header {
             height: 80px; 
         }
 
         h1 {
-            h1.yearsPage {
             color: #495ad1;
             text-align: center;
             font-size: 56px;
             text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
             margin-bottom: 10px;
+        }
+
+        .navBar h1 {
+            text-shadow: none;
         }
 
         .history-snippet, .post-snippet {
@@ -65,6 +72,10 @@ block content
 
         a:hover {
             text-decoration: underline;
+        }
+
+        .navBar a:hover {
+            text-decoration: none;
         }
 
         .author-info {
